@@ -1,3 +1,7 @@
+2006-11-27  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* Makefile (HURDLIBS): Add `netfs'.
+
 2006-06-15  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* hello-mt.c (trivfs_S_io_seek): Seek into the correct direction for
